Add html on activity card for displaying result of compareuserstepggoal method #18

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,10 @@
             <p>ALL USERS' AVERAGE STEP GOAL:</p>
             <h4 id='steps-friend-average-step-goal'></h4>
           </div>
+          <div class='card-data-line'>
+            <p>HOW YOUR STEP GOAL COMPARES:</p>
+            <h4 id='steps-goal-comparison'></h4>
+          </div>
         </section>
         <section class='trending-card hide' id='steps-trending-card'>
           <button type='button' name='button' class='go-back-button steps-go-back-button'></button>
