Add hydrationSection handler

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
           </div>
         </section>
       </section>
-      <section class='card-container' id='hydration-card-container'>
+      <section class='card-container hydration' id='hydration-card-container'>
         <section class='main-card' id='hydration-main-card'>
           <div class='main-card-top-row'>
             <button type='button' name='button' class='info-button hydration-info-button'></button>
