--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <meta charset='UTF-8'>
     <title>Trisha & Kayla's FitLit</title>
@@ -23,9 +23,10 @@
       <section class='card-container' id='steps-card-container'>
         <section class='main-card' id='steps-main-card'>
           <div class='main-card-top-row'>
-            <button type='button' name='button' class='info-button steps-info-button'></button>
+            <button type='button' name='button' class='info-button steps-info-button' aria-label='View User Steps Information' aria-hidden='true'></button> 
+            <!-- aria not working on button above or below  -->
             <h3>YOU HAVE WALKED</h3>
-            <button type='button' name='button' class='friends-button steps-friends-button'></button>
+            <button type='button' name='button' class='friends-button steps-friends-button' aria-label='View Friends Step Button' aria-hidden='true'></button>
           </div>
           <h2 id='steps-user-steps-today'>X</h2>
           <div class='main-card-top-row'>
