Add inputs to info cards

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
             <p>TOTAL MILES WALKED TODAY:</p>
             <h4 id='steps-info-miles-walked-today'></h4>
           </div>
+          <div class="input-box">
+            <input type="text" class="inputs" id="input-steps" placeholder="steps" maxlength="10" minlength="0">
+            <button class="submit-button user-steps-submit"></button>
         </section>
         <section class='friends-card hide' id='steps-friends-card'>
           <button type='button' name='button' class='go-back-button steps-go-back-button'></button>
@@ -97,11 +100,11 @@
         <section class='info-card hide' id='hydration-info-card'>
           <button type='button' name='button' class='go-back-button hydration-go-back-button'></button>
           <div class='card-data-line'>
-            <p>How many ounces of water have you drank today?</p>
-            <div class="input-ounces-box">
+            <p>Add today's water consumption:</p>
+            <div class="input-box">
               <input type="text" class="inputs" id="input-ounces" placeholder="oz" maxlength="5"
                 minlength="0">
-              <button class="submit-button user-ounces-submit">Clear</button>
+              <button class="submit-button user-ounces-submit"></button>
             </div>
           </div>
         </section>
@@ -159,6 +162,9 @@
           <div class='card-data-line'>
             <p>FLIGHTS CLIMBED TODAY</p>
             <h4 id='stairs-info-flights-today'></h4>
+            <div class="input-box">
+              <input type="text" class="inputs" id="input-stairss" placeholder="stairs" maxlength="5" minlength="0">
+              <button class="submit-button user-stairs-submit"></button>
           </div>
         </section>
         <section class='friends-card hide' id='stairs-friends-card'>
