Add input to sleep info card

--- a/src/index.html
+++ b/src/index.html
@@ -205,6 +205,11 @@
           </div>
         </section>
         <section class='info-card hide' id='sleep-info-card'>
+          <p>Add hours slept last night:</p>
+          <div class="input-box">
+            <input type="text" class="inputs" id="input-sleep" placeholder="hours" maxlength="5" minlength="0">
+            <button class="submit-button user-sleep-submit"></button>
+          </div>
           <button type='button' name='button' class='go-back-button sleep-go-back-button'></button>
           <div class='card-data-line'>
             <p>SLEEP QUALITY LAST NIGHT</p>
