--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             <div class="input-box">
               <input type="text" class="inputs" id="input-ounces" placeholder="oz" maxlength="5"
                 minlength="0">
-              <button class="submit-button user-ounces-submit"></button>
+              <button class='submit-button user-ounces-submit'></button>
             </div>
           </div>
         </section>
