--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
             <h3>YOU HAVE HAD</h3>
             <button type='button' name='button' class='friends-button hydration-friends-button'></button>
           </div>
-          <h2 id='hydration-user-ounces-today'></h2>
+          <h2 id='hydration-user-ounces-today'>0</h2>
           <div class='main-card-bottom-row'>
             <h3>OZ OF WATER TODAY</h3>
             <button type='button' name='button' class='calendar-button hydration-calendar-button'></button>
