--- a/src/index.html
+++ b/src/index.html
@@ -191,12 +191,13 @@
           </div>
         </section>
         <section class='info-card hide' id='sleep-info-card'>
-          <p>Add hours slept last night:</p>
+          <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
+          <p>Add last night's hours of sleep and sleep quality (scale 1-5):</p>
           <div class="input-box">
             <input type="text" class="inputs" id="input-sleep" placeholder="hours" maxlength="5" minlength="0">
+            <input type="text" class="inputs" id="input-sleep-quality" placeholder="hours" maxlength="5" minlength="0">
             <button class="submit-button user-sleep-submit"></button>
           </div>
-          <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
             <p>SLEEP QUALITY LAST NIGHT</p>
             <h4 id='sleep-info-quality-today'></h4>
