Add Activity Repo

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           <div class='main-card-top-row'>
             <button name='button' class='trending-button steps-trending-button' aria-label='Open Trending Step Information'></button>
             <h3>STEPS TODAY</h3>
-            <button name='button' class='calendar-button steps-calendar-button' aria-label='Open Calendar'></button>></button>
+            <button name='button' class='calendar-button steps-calendar-button' aria-label='Open Calendar'></button>
           </div>
         </section>
         <section class='info-card hide' id='steps-info-card'>
@@ -49,6 +49,7 @@
           </div>
           <div class="input-box">
             <input type="text" class="inputs" id="input-steps" placeholder="steps" maxlength="10" minlength="0">
+            <input type="text" class="inputs" id="input-steps-minutes" placeholder="minutes" maxlength="10" minlength="0">
             <button class="submit-button user-steps-submit"></button>
         </section>
         <section class='friends-card hide' id='steps-friends-card'>
@@ -107,8 +108,7 @@
           <div class='card-data-line'>
             <p>Add today's water consumption:</p>
             <div class="input-box">
-              <input type="text" class="inputs" id="input-ounces" placeholder="oz" maxlength="5"
-                minlength="0">
+              <input type="text" class="inputs" id="input-ounces" placeholder="oz" maxlength="5" minlength="0">
               <button class='submit-button user-ounces-submit'></button>
             </div>
           </div>
@@ -147,7 +147,7 @@
             <p>FLIGHTS CLIMBED TODAY</p>
             <h4 id='stairs-info-flights-today'></h4>
             <div class="input-box">
-              <input type="text" class="inputs" id="input-stairss" placeholder="stairs" maxlength="5" minlength="0">
+              <input type="text" class="inputs" id="input-stairs" placeholder="stairs" maxlength="5" minlength="0">
               <button class="submit-button user-stairs-submit"></button>
           </div>
         </section>
@@ -195,7 +195,7 @@
           <p>Add last night's hours of sleep and sleep quality (scale 1-5):</p>
           <div class="input-box">
             <input type="text" class="inputs" id="input-sleep" placeholder="hours" maxlength="5" minlength="0">
-            <input type="text" class="inputs" id="input-sleep-quality" placeholder="hours" maxlength="5" minlength="0">
+            <input type="text" class="inputs" id="input-sleep-quality" placeholder="quality" maxlength="5" minlength="0">
             <button class="submit-button user-sleep-submit"></button>
           </div>
           <div class='card-data-line'>
