Add place holder for sleep trending button

--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,8 @@
           </div>
           <h2 id='sleep-user-hours-today'></h2>
           <div class='main-card-bottom-row'>
+            <button name='button' class='trending-button steps-trending-button'
+              aria-label='Open Trending Step Information'></button>
             <h3>HOURS LAST NIGHT</h3>
             <button name='button' class='calendar-button sleep-calendar-button' aria-label='Open Sleep Calendar'></button>
           </div>
