--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <button name='button' class='friends-button steps-friends-button' aria-label='Open Friends Step Information'>
             </button>
           </div>
-          <h2 id='steps-user-steps-today'>X</h2>
+          <h2 id='steps-user-steps-today'>0</h2>
           <div class='main-card-top-row'>
             <button name='button' class='trending-button steps-trending-button' aria-label='Open Trending Step Information'></button>
             <h3>STEPS TODAY</h3>
@@ -41,11 +41,11 @@
           </button>
           <div class='card-data-line'>
             <p>TOTAL ACTIVE MINUTES TODAY:</p>
-            <h4 id='steps-info-active-minutes-today'></h4>
+            <h4 id='steps-info-active-minutes-today'>0</h4>
           </div>
           <div class='card-data-line'>
             <p>TOTAL MILES WALKED TODAY:</p>
-            <h4 id='steps-info-miles-walked-today'></h4>
+            <h4 id='steps-info-miles-walked-today'>0</h4>
           </div>
           <div class="input-box">
             <input type="text" class="inputs" id="input-steps-minutes" placeholder="minutes" maxlength="10" minlength="0">
