Create input and submit button to enable searching records by date

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,10 @@
         <section class='info-card hide' id='steps-info-card'>
           <button name='button' class='go-back-button steps-go-back-button' aria-label='Return To Previous Information'>
           </button>
+              <div class="input-box">
+                <input type="text" class="inputs" id="input-date" placeholder="date" maxlength="10" minlength="0">
+                <button class='submit-button date-input-submit'></button>
+              </div>
           <div class='card-data-line'>
             <p>TOTAL ACTIVE MINUTES TODAY:</p>
             <h4 id='steps-info-active-minutes-today'>0</h4>
@@ -56,11 +60,11 @@
           <button name='button' class='go-back-button steps-go-back-button' aria-label='Return To Previous Information'></button>
           <div class='card-data-line'>
             <p>ALL USERS' AVERAGE ACTIVE MINUTES TODAY:</p>
-            <h4 id='steps-friend-active-minutes-average-today'></h4>
+            <h4 id='steps-friend-active-minutes-average-today'>0</h4>
           </div>
           <div class='card-data-line'>
             <p>ALL USERS' AVERAGE STEPS TODAY:</p>
-            <h4 id='steps-friend-steps-average-today'></h4>
+            <h4 id='steps-friend-steps-average-today'>0</h4>
           </div>
           <div class='card-data-line'>
             <p>ALL USERS' AVERAGE STEP GOAL:</p>
