Add method to display ounces by the day over a week

--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,31 @@
           <button type='button' name='button' class='go-back-button hydration-go-back-button'></button>       
           <h5 class='hydration-weekly-avg'>You averaged ounces this week!</h5>
           <article class='hydration-week-data-list'>
+                <div class='hydration-data-line'>
+                  <p class='hydration-weekly-label'>YESTERDAY:</p>
+                  <h4 class='hydration-weekly-amount'><span class='daily-oz' id='hydration-calendar-ounces-1day'></span> oz</h4>
+                </div>
+                <div class='hydration-data-line'>
+                  <p class='hydration-weekly-label'>2 DAYS AGO:</p>
+                  <h4 class='hydration-weekly-amount'><span class='daily-oz' id='hydration-calendar-ounces-2day'></span> oz</h4>
+                </div>
+                <div class='hydration-data-line'>
+                  <p class='hydration-weekly-label'>3 DAYS AGO:</p>
+                  <h4 class='hydration-weekly-amount'><span class='daily-oz' id='hydration-calendar-ounces-3day'></span> oz</h4>
+                </div>
+                <div class='hydration-data-line'>
+                  <p class='hydration-weekly-label'>4 DAYS AGO:</p>
+                  <h4 class='hydration-weekly-amount'><span class='daily-oz' id='hydration-calendar-ounces-4day'></span> oz</h4>
+                </div>
+                <div class='hydration-data-line'>
+                  <p class='hydration-weekly-label'>5 DAYS AGO:</p>
+                  <h4 class='hydration-weekly-amount'><span class='daily-oz' id='hydration-calendar-ounces-5day'></span> oz</h4>
+                </div>
+                <div class='hydration-data-line'>
+                  <p class='hydration-weekly-label'>6 DAYS AGO:</p>
+                  <h4 class='hydration-weekly-amount'><span class='daily-oz' id='hydration-calendar-ounces-6day'></span> oz</h4>
+                </div>
+                </section>
           </article>
         </section>
       </section>
