Add new p text to acitivty info card to explain date input

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
           <button name='button' class='go-back-button steps-go-back-button' aria-label='Return To Previous Information'>
           </button>
               <div class="input-box">
-                <input type="text" class="inputs" id="input-date" placeholder="date" maxlength="10" minlength="0">
+                <p class="steps-date-text">SUMMARY OF TODAY'S STEPS, OR SEARCH BY DATE:</p>
+                <input type="text" class="inputs" id="input-date" placeholder="YYYY/MM/DD" maxlength="10" minlength="10">
                 <button class='submit-button date-input-submit'></button>
               </div>
           <div class='card-data-line'>
