Add display method to display community average stairs on date

--- a/src/index.html
+++ b/src/index.html
@@ -173,17 +173,17 @@
         <section class='info-card hide' id='stairs-info-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>FLIGHTS CLIMBED TODAY</p>
+            <p>FLIGHTS CLIMBED TODAY:</p>
             <h4 id='stairs-info-flights-today'></h4>
             <div class="input-box">
-              <input type="text" class="inputs" id="input-stairs" placeholder="stairs" maxlength="5" minlength="0">
+              <input type="text" class="inputs" id="input-stairs" placeholder="flights" maxlength="5" minlength="0">
               <button class="submit-button user-stairs-submit"></button>
           </div>
         </section>
         <section class='friends-card hide' id='stairs-friends-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>ALL USERS' AVERAGE FLIGHTS TODAY</p>
+            <p>ALL USERS' AVERAGE FLIGHTS TODAY:</p>
             <h4 id='stairs-friend-flights-average-today'></h4>
           </div>
         </section>
@@ -195,11 +195,11 @@
         <section class='calendar-card hide' id='stairs-calendar-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>YOUR WEEKLY FLIGHTS CLIMBED</p>
+            <p>YOUR WEEKLY FLIGHTS CLIMBED:</p>
             <h4 id='stairs-calendar-flights-average-weekly'></h4>
           </div>
           <div class='card-data-line'>
-            <p>YOUR WEEKLY STAIRS CLIMBED</p>
+            <p>YOUR WEEKLY STAIRS CLIMBED:</p>
             <h4 id='stairs-calendar-stairs-average-weekly'></h4>
           </div>
         </section>
