Display community average stairs overall

--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
         <section class='friends-card hide' id='stairs-friends-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>ALL USERS' AVERAGE FLIGHTS TODAY:</p>
+            <p>ALL USERS' AVERAGE FLIGHTS:</p>
             <h4 id='stairs-friend-flights-average-today'></h4>
           </div>
         </section>
