Add 0 to h2 element for sleep

--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@
             <button name='button' class='friends-button sleep-friends-button' aria-label='Open Friends Sleep Information'>
             </button>
           </div>
-          <h2 id='sleep-user-hours-today'></h2>
+          <h2 id='sleep-user-hours-today'>0</h2>
           <div class='main-card-bottom-row'>
             <button name='button' class='trending-button steps-trending-button'
               aria-label='Open Trending Step Information'></button>
