Change wording for sleep quality display

--- a/src/index.html
+++ b/src/index.html
@@ -234,11 +234,11 @@
             <h4 id='sleep-info-quality-today'></h4>
           </div>
           <div class='card-data-line'>
-            <p>OVERALL NUMBER OF HOURS AVERAGE</p>
+            <p>Average Hours Slept Overall</p>
             <h4 id='sleep-info-hours-average-alltime'></h4>
           </div>
           <div class='card-data-line'>
-            <p>OVERALL SLEEP QUALITY AVERAGE</p>
+            <p>Average Quality Overall</p>
             <h4 id='sleep-info-quality-average-alltime'></h4>
           </div>
         </section>
