--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
         </section>
         <section class='info-card hide' id='sleep-info-card'>
           <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
-          <p>Add last night's hours of sleep and sleep quality (scale 1-5):</p>
+          <p>Add last night's approximate hours of sleep and sleep quality (scale 1-5):</p>
           <div class="input-box">
             <input type="number" class="inputs" id="input-sleep" placeholder="hours" max="24" maxlength="5" minlength="0">
             <input type="number" class="inputs" id="input-sleep-quality" placeholder="quality" max="5" min="1" maxlength="5" minlength="0">
