--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,13 @@
           <div class='main-card-top-row'>
             <button name='button' class='info-button steps-info-button' aria-label='Open User Steps Information'>
             </button> 
-            <h3>YOU HAVE WALKED</h3>
+            <h3>YOU WALKED</h3>
             <button name='button' class='friends-button steps-friends-button' aria-label='Open Friends Step Information'>
             </button>
           </div>
           <h2 id='steps-user-steps-today'>0</h2>
-          <div class='main-card-top-row'>
-            <button name='button' class='trending-button steps-trending-button' aria-label='Open Trending Step Information'></button>
+          <div class='main-card-bottom-row'>
+            <!-- <button name='button' class='trending-button steps-trending-button' aria-label='Open Trending Step Information'></button> -->
             <h3>STEPS TODAY</h3>
             <button name='button' class='calendar-button steps-calendar-button' aria-label='Open Calendar'></button>
           </div>
@@ -92,7 +92,7 @@
         <section class='main-card' id='hydration-main-card'>
           <div class='main-card-top-row'>
             <button name='button' class='info-button hydration-info-button' aria-label='Open Users Hydration Information'></button>
-            <h3>YOU HAVE HAD</h3>
+            <h3>YOU DRANK</h3>
             <button name='button' class='friends-button hydration-friends-button' aria-label='Open Friends Hydration Information'></button>
           </div>
           <h2 id='hydration-user-ounces-today'></h2>
@@ -155,12 +155,12 @@
         <section class='main-card' id='stairs-main-card'>
           <div class='main-card-top-row'>
             <button name='button' class='info-button stairs-info-button' aria-label='Open Users Stair Count Information'></button>
-            <h3>YOU HAVE CLIMBED</h3>
+            <h3>YOU CLIMBED</h3>
             <button name='button' class='friends-button stairs-friends-button' aria-label='Open Friends Stair Count Information'></button>
           </div>
           <h2 id='stairs-user-stairs-today'></h2>
-          <div class='main-card-top-row'>
-            <button name='button' class='trending-button stairs-trending-button' aria-label='Open Trending Stair Count Information'></button>
+          <div class='main-card-bottom-row'>
+            <!-- <button name='button' class='trending-button stairs-trending-button' aria-label='Open Trending Stair Count Information'></button> -->
             <h3>STAIRS TODAY</h3>
             <button name='button' class='calendar-button stairs-calendar-button' aria-label='Open Calendar'></button>
           </div>
@@ -210,8 +210,8 @@
           </div>
           <h2 id='sleep-user-hours-today'>0</h2>
           <div class='main-card-bottom-row'>
-            <button name='button' class='trending-button steps-trending-button'
-              aria-label='Open Trending Step Information'></button>
+            <!-- <button name='button' class='trending-button steps-trending-button' -->
+              <!-- aria-label='Open Trending Step Information'></button> -->
             <h3>HOURS LAST NIGHT</h3>
             <button name='button' class='calendar-button sleep-calendar-button' aria-label='Open Sleep Calendar'></button>
           </div>
