Add styling to inputs

--- a/src/index.html
+++ b/src/index.html
@@ -225,26 +225,26 @@
             <button class="submit-button user-sleep-submit"></button>
           </div>
           <div class='card-data-line'>
-            <p>SLEEP QUALITY LAST NIGHT</p>
+            <p>SLEEP QUALITY LAST NIGHT:</p>
             <h4 id='sleep-info-quality-today'></h4>
           </div>
           <div class='card-data-line'>
-            <p>OVERALL NUMBER OF HOURS AVERAGE</p>
+            <p>OVERALL NUMBER OF HOURS AVERAGE:</p>
             <h4 id='sleep-info-hours-average-alltime'></h4>
           </div>
           <div class='card-data-line'>
-            <p>OVERALL SLEEP QUALITY AVERAGE</p>
+            <p>OVERALL SLEEP QUALITY AVERAGE:</p>
             <h4 id='sleep-info-quality-average-alltime'></h4>
           </div>
         </section>
         <section class='friends-card hide' id='sleep-friends-card'>
           <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>LAST NIGHT'S SUPERIOR SLEEPER</p>
+            <p>LAST NIGHT'S SUPERIOR SLEEPER:</p>
             <h4 id='sleep-friend-longest-sleeper'></h4>
           </div>
           <div class='card-data-line'>
-            <p>LAST NIGHT'S INFERIOR SLEEPER</p>
+            <p>LAST NIGHT'S INFERIOR SLEEPER:</p>
             <h4 id='sleep-friend-worst-sleeper'></h4>
           </div>
         </section>
