Add friends to dropdown

--- a/src/index.html
+++ b/src/index.html
@@ -251,11 +251,11 @@
         <section class='calendar-card hide' id='sleep-calendar-card'>
           <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>LAST WEEK'S HOURLY AVERAGE</p>
+            <p>LAST WEEK'S HOURLY AVERAGE:</p>
             <h4 id='sleep-calendar-hours-average-weekly'></h4>
           </div>
           <div class='card-data-line'>
-            <p>LAST WEEK'S QUALITY AVERAGE</p>
+            <p>LAST WEEK'S QUALITY AVERAGE:</p>
             <h4 id='sleep-calendar-quality-average-weekly'></h4>
           </div>
         </section>
