--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
-    <title>Trisha & Kayla's FitLit</title>
+    <title>FitLit</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1><span id='header-name'></span>FITLIT</h1>
+      <h1><span id='header-name'></h1>
       <button name='button' id='profile-button' aria-label='Expand User Profile Information'></button>
       <section class='hide' id='user-info-dropdown' aria-expanded='false'>
         <h5 id='dropdown-name'></h5>
@@ -30,7 +30,7 @@
             </button>
           </div>
           <h2 id='steps-user-steps-today'>0</h2>
-          <div class='main-card-bottom-row'>
+          <div class='main-card-bottom-row'> 
             <h3>STEPS TODAY</h3>
             <button name='button' class='calendar-button steps-calendar-button' aria-label='Open Calendar'></button>
           </div>
@@ -46,6 +46,7 @@
             <p>TOTAL MILES WALKED TODAY:</p>
             <h4 id='steps-info-miles-walked-today'>0</h4>
           </div>
+            <p class='steps-input-instructions'>Add steps and active minutes for today:</p>
           <div class="input-box">
             <input type="number" class="inputs" id="input-steps-minutes" placeholder="minutes" maxlength="10" minlength="0" min="0">
             <input type="number" class="inputs" id="input-steps" placeholder="steps" maxlength="10" minlength="0" min="0">
@@ -68,7 +69,6 @@
           <div class='card-data-line'>
             <p id='steps-goal-comparison' class='step-goal-comparison-all-users'></p>
           </div>
-        </section>
         </section>
         <section class='calendar-card hide' id='steps-calendar-card'>
           <button name='button' class='go-back-button steps-go-back-button' aria-label='Return To Previous Information'></button>
@@ -161,7 +161,7 @@
         <section class='info-card hide' id='stairs-info-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>FLIGHTS CLIMBED TODAY:</p>
+            <p>ADD FLIGHTS CLIMBED TODAY:</p>
             <h4 id='stairs-info-flights-today'></h4>
             <div class="input-box">
               <input type="number" class="inputs" id="input-stairs" placeholder="flights" maxlength="5" minlength="0">
@@ -174,7 +174,6 @@
             <p>ALL USERS' AVERAGE FLIGHTS:</p>
             <h4 id='stairs-friend-flights-average-today'></h4>
           </div>
-        </section>
         </section>
         <section class='calendar-card hide' id='stairs-calendar-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
@@ -205,7 +204,7 @@
         </section>
         <section class='info-card hide' id='sleep-info-card'>
           <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
-          <p>Add last night's approximate hours of sleep and sleep quality (scale 1-5):</p>
+          <p class='sleep-input-instructions'>Add last night's approximate hours of sleep and sleep quality (scale 1-5):</p>
           <div class="input-box">
             <input type="number" class="inputs" id="input-sleep" placeholder="hours" max="24" maxlength="5" minlength="0">
             <input type="number" class="inputs" id="input-sleep-quality" placeholder="quality" max="5" min="1" maxlength="5" minlength="0">
