Edit text in stairs info display

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
         <section class='info-card hide' id='stairs-info-card'>
           <button name='button' class='go-back-button stairs-go-back-button' aria-label='Return to Previous Information'></button>
           <div class='card-data-line'>
-            <p>ADD FLIGHTS CLIMBED TODAY:</p>
+            <p>ADD STAIRS CLIMBED TODAY:</p>
             <h4 id='stairs-info-flights-today'></h4>
             <div class="input-box">
               <input type="number" class="inputs" id="input-stairs" placeholder="flights" maxlength="5" minlength="0">
