Add default values to hydration and stairs and delete friends section from sleep

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
             <h3>YOU DRANK</h3>
             <button name='button' class='friends-button hydration-friends-button' aria-label='Open Friends Hydration Information'></button>
           </div>
-          <h2 id='hydration-user-ounces-today'></h2>
+          <h2 id='hydration-user-ounces-today'>0</h2>
           <div class='main-card-bottom-row'>
             <h3>OZ OF WATER TODAY</h3>
             <button name='button' class='calendar-button hydration-calendar-button' aria-label='Open Hydration Calendar'> 
@@ -152,7 +152,7 @@
             <h3>YOU CLIMBED</h3>
             <button name='button' class='friends-button stairs-friends-button' aria-label='Open Friends Stair Count Information'></button>
           </div>
-          <h2 id='stairs-user-stairs-today'></h2>
+          <h2 id='stairs-user-stairs-today'>0</h2>
           <div class='main-card-bottom-row'>
             <h3>STAIRS TODAY</h3>
             <button name='button' class='calendar-button stairs-calendar-button' aria-label='Open Calendar'></button>
@@ -193,13 +193,11 @@
             <button name='button' class='info-button sleep-info-button' aria-label='Open Users Sleep Information'>
             </button>
             <h3>YOU SLEPT</h3>
-            <button name='button' class='friends-button sleep-friends-button' aria-label='Open Friends Sleep Information'>
-            </button>
+            <button name='button' class='calendar-button sleep-calendar-button' aria-label='Open Sleep Calendar'></button>
           </div>
           <h2 id='sleep-user-hours-today'>0</h2>
           <div class='main-card-bottom-row'>
             <h3>HOURS LAST NIGHT</h3>
-            <button name='button' class='calendar-button sleep-calendar-button' aria-label='Open Sleep Calendar'></button>
           </div>
         </section>
         <section class='info-card hide' id='sleep-info-card'>
@@ -221,17 +219,6 @@
           <div class='card-data-line'>
             <p>Average Quality Overall</p>
             <h4 id='sleep-info-quality-average-alltime'></h4>
-          </div>
-        </section>
-        <section class='friends-card hide' id='sleep-friends-card'>
-          <button name='button' class='go-back-button sleep-go-back-button' aria-label='Return to Previous Information'></button>
-          <div class='card-data-line'>
-            <p>LAST NIGHT'S SUPERIOR SLEEPER:</p>
-            <h4 id='sleep-friend-longest-sleeper'></h4>
-          </div>
-          <div class='card-data-line'>
-            <p>LAST NIGHT'S INFERIOR SLEEPER:</p>
-            <h4 id='sleep-friend-worst-sleeper'></h4>
           </div>
         </section>
         <section class='calendar-card hide' id='sleep-calendar-card'>
