Add colons to sleep stats

--- a/src/index.html
+++ b/src/index.html
@@ -213,11 +213,11 @@
             <h4 id='sleep-info-quality-today'></h4>
           </div>
           <div class='card-data-line'>
-            <p>Average Hours Slept Overall</p>
+            <p>Average Hours Slept Overall:</p>
             <h4 id='sleep-info-hours-average-alltime'></h4>
           </div>
           <div class='card-data-line'>
-            <p>Average Quality Overall</p>
+            <p>Average Quality Overall:</p>
             <h4 id='sleep-info-quality-average-alltime'></h4>
           </div>
         </section>
