--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
           </div>
           <h2 id='hydration-user-ounces-today'>0</h2>
           <div class='main-card-bottom-row' id="long-text-bottom-row">
-            <h3>OZ OF WATER TODAY</h3>
+            <h3 id="long-bottom-row-text">OZ OF WATER TODAY</h3>
             <button name='button' class='calendar-button hydration-calendar-button' aria-label='Open Hydration Calendar'> 
             </button>
           </div>
