--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
             <button name='button' class='calendar-button sleep-calendar-button' aria-label='Open Sleep Calendar'></button>
           </div>
           <h2 id='sleep-user-hours-today'>0</h2>
-          <div class='main-card-bottom-row' id="long-text-bottom-row">
+          <div class='main-card-bottom-row' id="sleep-bottom-row">
             <h3>HOURS LAST NIGHT</h3>
           </div>
         </section>
